@@ -225,6 +225,7 @@ int command_pickup(object *op, char *params);
 int command_search_items(object *op, char *params);
 int command_rename_item(object *op, char *params);
 int command_lock_item(object *op, char *params);
+int command_use(object* op, char* params);
 /* c_party.c */
 partylist *get_firstparty(void);
 void remove_party(partylist *target_party);
